day3/configmap-vol-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-vol-pod
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh", "-c", "while true; do sleep 3600; done"]
      volumeMounts:
        - name: vol-mariadb
          mountPath: /config
  volumes:
    - name: vol-mariadb
      configMap:
        name: mariadb-cm
