day3/toleration-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toleration-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
      tolerations:
      - key: "kubernetes.io/env"
        operator: "Equal"
        value: "prod"
        effect: "NoSchedule"
      - key: "kubernetes.io/zone"
        operator: "Exists"
        effect: "NoExecute"
status: {}
