day3/with-pod-anti-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-anti-affinity
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: run
              operator: In
              values:
              - nodename-pod
          topologyKey: kubernetes.io/country
  containers:
  - name: with-pod-affinity
    image: registry.k8s.io/pause:2.0
